day6 part 2